# grok-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
static/: index.html
